# nonebot-plugin-gpt3

./: .gitignore  README.md  __init__.py  pyproject.toml
config/: prompts.yml
nonebot_plugin_gpt3/: __init__.py  config.py  openai.py
