[tool.poetry]
name = "nonebot-plugin-gpt3"
version = "1.1.9"
description = ""
authors = ["chrisyy <1017975501@qq.com>"]
readme = "README.md"
packages = [{include = "nonebot_plugin_gpt3"}]

[tool.poetry.dependencies]
python = "^3.8"
nonebot2 = "^2.0.0rc2"
nonebot-adapter-onebot = "^2.1.5"

tiktoken = "0.3.0"
httpx = "^0.23.1"
nonebot-plugin-htmlrender="^0.2.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
